feat: implement role-based authorization with Spring Security